version/0.19/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.Filename.rst.txt
ansys.fluent.core.solver.flobject.Filename
==========================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: Filename

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~Filename.__init__
      ~Filename.default_value
      ~Filename.get_attr
      ~Filename.get_attrs
      ~Filename.get_state
      ~Filename.is_active
      ~Filename.is_read_only
      ~Filename.print_state
      ~Filename.set_flproxy
      ~Filename.set_state
      ~Filename.to_python_keys
      ~Filename.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Filename.flproxy
      ~Filename.fluent_name
      ~Filename.obj_name
      ~Filename.parent
      ~Filename.path
      ~Filename.python_name
      ~Filename.python_path
   
   